# thesis-benchmarks

./: .gitignore  Makefile  README.md  build-futhark.sh  enable-segredomap.patch  enable-versionedCode.patch  mean-and-std.py  runtest.sh
intense/: Makefile  intensive-comm.fut  intensive-nocomm.fut  runtest.sh  segintensive-comm.fut  segintensive-nocomm.fut  shared.fut
more/: Makefile  createdata.sh  f32-loopinmap.fut  f32-mapinloop.fut  f32-reduce-comm.fut  f32-reduce-nocomm.fut  f32-segreduce-comm.fut  runner.sh  runtest.sh
more/reshape-trick/: Makefile  f32-segreduce-nocomm.fut  reshape-trick-runner.sh
mss/: Makefile  loopinmap.fut  mss.fut  segmss.fut
redomap/: gen.py
related-work/: Makefile  moderngpu.cu  thrust.cu
related-work/accelerate/: stack.yaml  thesis-benchmark-accelerate.cabal
related-work/accelerate/src/: Main.hs
related-work/accelerate/src/Random/: Array.hs
sum/: Makefile  f32-loopinmap.fut  f32-reduce-nocomm.fut  f32-segreduce-nocomm.fut  runtest.sh
transpose-cost/: transpose.fut
