name:                thesis-benchmark-accelerate
version:             0.1
-- synopsis:
-- description:
build-type:          Simple
cabal-version:       >=1.10

Library
  -- Packages needed in order to build this package.

  build-depends:       base >= 4.7 && < 5
                     , accelerate == 1.0.*
                     , accelerate-llvm-ptx == 1.0.*
                     , criterion >= 1.0
                     , mwc-random >= 0.8

  Exposed-modules: Random.Array

  hs-source-dirs:      src

  default-language:    Haskell2010

  Ghc-Options:        -Wall

executable thesis-benchmark-accelerate
  Main-is: src/Main.hs
  build-depends:       base >= 4.7 && < 5
                     , accelerate == 1.0.*
                     , accelerate-llvm-ptx == 1.0.*
                     , criterion >= 1.0
                     , mwc-random >= 0.8
                     , thesis-benchmark-accelerate
--                     , accelerate-cuda >= 0.15

  default-language:    Haskell2010

  Ghc-Options:         -Wall -threaded
